Docker-compose for redismod with config files

--- a/redis/docker-compose.yml
+++ b/redis/docker-compose.yml
@@ -7,5 +7,6 @@ services:
     volumes:
       - ./data:/data
       - ./redis.conf:/usr/local/etc/redis/redis.conf
+    command: ["/usr/local/etc/redis/redis.conf"] # load modules, set /data directory, point at python
     ports:
       - 6379:6379
