--- a/api/src/main/resources/config/application-dev.yml
+++ b/api/src/main/resources/config/application-dev.yml
@@ -95,3 +95,6 @@ jhipster:
 # ===================================================================
 
 # application:
+spring.redis.host: localhost
+spring.redis.port: 6379
+spring.autoconfigure.exclude: org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
