--- a/api/src/main/resources/config/application.yml
+++ b/api/src/main/resources/config/application.yml
@@ -176,3 +176,6 @@ jhipster:
 # ===================================================================
 
 # application:
+spring.redis.host: localhost
+spring.redis.port: 6379
+spring.autoconfigure.exclude: org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
