--- a/api/build.gradle
+++ b/api/build.gradle
@@ -233,6 +233,7 @@ dependencies {
     implementation "org.springframework.data:spring-data-redis:2.5.0"
     implementation "io.lettuce:lettuce-core:6.1.1.RELEASE"
     implementation "com.google.code.gson:gson:2.8.5"
+    implementation group: 'com.redislabs', name: 'jrejson', version: '1.3.0'
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor:${springBootVersion}"
     annotationProcessor "org.projectlombok:lombok:1.18.10"
