--- a/api/build.gradle
+++ b/api/build.gradle
@@ -173,6 +173,9 @@ configurations {
 repositories {
     mavenLocal()
     mavenCentral()
+    maven {
+        url "https://oss.sonatype.org/content/repositories/snapshots"
+    }
     //jhipster-needle-gradle-repositories - JHipster will add additional repositories
 }
 
@@ -233,7 +236,7 @@ dependencies {
     implementation "org.springframework.data:spring-data-redis:2.5.0"
     implementation "io.lettuce:lettuce-core:6.1.1.RELEASE"
     implementation "com.google.code.gson:gson:2.8.5"
-    implementation group: 'com.redislabs', name: 'jrejson', version: '1.3.0'
+    implementation group: 'com.redislabs', name: 'jrejson', version: '1.4.0-SNAPSHOT'
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor:${springBootVersion}"
     annotationProcessor "org.projectlombok:lombok:1.18.10"
