--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ jobs:
       # - image: circleci/postgres:9.4
 
     working_directory: ~/repo/ri-redis-hackathon-2021/api
+    build_dir: api
 
     environment:
       # Customize the JVM maximum heap limit
@@ -39,4 +40,4 @@ jobs:
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
       # run tests!
-      - run: ./gradlew test integrationTest jacocoTestReport
+      - run: gradle test integrationTest jacocoTestReport
