--- a/api/src/main/resources/config/application.yml
+++ b/api/src/main/resources/config/application.yml
@@ -179,3 +179,7 @@ jhipster:
 spring.redis.host: localhost
 spring.redis.port: 6379
 spring.autoconfigure.exclude: org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+
+# Redis key settings
+caas.redis.key_prefix: "caas_"
+caas.redis.key_object: "caas_keys"
