--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,10 @@ jobs:
           paths:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle" }}
+      
+      - store_test_results:
+          path: test-results
 
       # run tests!
-      - run: gradle build
+      - run: gradle test integrationTest jacocoTestReport
+      
