--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/postgres:9.4
 
-    working_directory: ~/projects/ri-redis-hackathon-2021/api
+    working_directory: ~/projects/ri-redis-hackathon-2021
 
     environment:
       # Customize the JVM maximum heap limit
@@ -42,5 +42,7 @@ jobs:
           path: test-results
 
       # run tests!
+      - run: cd api
       - run: gradle test integrationTest jacocoTestReport
+      
       
