Ironing out the websocket side of things with a new /updates endpoint for websocket connection. The endpoint expects settingsId as a query param and looks for templateUpdateType and templateUpdateField if present. Tried to wire up session storage by hand in redis, but probably need to use some type of Spring WebSession redis integration.

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -206,6 +206,7 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-logging"
     implementation "org.springframework.boot:spring-boot-starter-actuator"
     implementation "org.springframework.boot:spring-boot-starter-security"
+    implementation "org.springframework.boot:spring-boot-starter-websocket"
     implementation ("org.springframework.boot:spring-boot-starter-web") {
         exclude module: "spring-boot-starter-tomcat"
     }
