Fix unit tests.  Added jedis library dependency in build.gradle.  Started to stub-out authentication endpoint in new AuthController.java

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -238,6 +238,10 @@ dependencies {
     implementation "io.lettuce:lettuce-core:6.1.1.RELEASE"
     implementation "com.google.code.gson:gson:2.8.5"
     implementation group: 'com.redislabs', name: 'jrejson', version: '1.4.0-SNAPSHOT'
+    
+    // Jedis
+    implementation "redis.clients:jedis:3.7.0-SNAPSHOT"
+
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor:${springBootVersion}"
     annotationProcessor "org.projectlombok:lombok:1.18.10"
