Code complete on the authenticateUser() API endpoint and integration with Keycloak

--- a/api/src/main/resources/config/application-test.yml
+++ b/api/src/main/resources/config/application-test.yml
@@ -99,6 +99,11 @@ spring.redis.host: localhost
 spring.redis.port: ${test.redis.server.port}
 spring.autoconfigure.exclude: org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
+# keycloak
+keycloak.server.url.auth: http://localhost:8080/auth/realms/CaaS/protocol/openid-connect/token
+keycloak.server.url.verifyToken: http://localhost:8080/auth/realms/CaaS/protocol/openid-connect/userinfo
+keycloak.client.id: caas
+
 # Redis key settings
 caas.redis.key_prefix: 'caas_test_'
 caas.redis.key_object: 'caas_keys_test'
