--- a/api/src/main/resources/config/application-prod.yml
+++ b/api/src/main/resources/config/application-prod.yml
@@ -124,6 +124,7 @@ spring.autoconfigure.exclude: org.springframework.boot.autoconfigure.security.se
 # keycloak
 keycloak.server.url.auth: http://localhost:8080/auth/realms/CaaS/protocol/openid-connect/token
 keycloak.server.url.verifyToken: http://localhost:8080/auth/realms/CaaS/protocol/openid-connect/userinfo
+keycloak.client.id: caas
 
 # Redis key settings
 caas.redis.key_prefix: 'caas_prod_'
