--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -24,7 +24,7 @@ COPY nginx.conf /etc/nginx/nginx.conf
 ## Remove default nginx index page
 RUN rm -rf /usr/share/nginx/html/*
 
-# Copy from the stage 1
+# # Copy from the stage 1
 COPY --from=builder /react-ui/build /usr/share/nginx/html
 
 EXPOSE 3000 80
