--- a/app/nginx.conf
+++ b/app/nginx.conf
@@ -5,12 +5,15 @@ events { worker_connections 1024; }
 http {
     server {
         listen 80;
-        root  /usr/share/nginx/html;
+
         include /etc/nginx/mime.types;
 
 
         location / {
-            try_files $uri /index.html;
+            root  /usr/share/nginx/html;
+            index index.html index.htm;
+            try_files $uri$args $uri$args/ $uri $uri/ /index.html =404;
+
         }
 
         location /appui {
@@ -21,7 +24,7 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-NginX-Proxy true;
-            proxy_pass  http://host.docker.internal:8081;
+            proxy_pass  http://caas-api:8081;
             proxy_ssl_session_reuse off;
             proxy_set_header Host $http_host;
             proxy_redirect off;
