--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-use-websocket": "^2.6.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -39,6 +40,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:8082"
+  }
 }
